// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactForm variant simple matches snapshot 1`] = `
<section
  class="contactForm contactForm--simple"
  data-max-width="wide"
  data-variant="simple"
>
  <div
    class="contactForm_inner"
  >
    <form
      aria-labelledby="contactForm-heading"
      class="contactForm_form"
    >
      <h2
        class="contactForm_heading"
        data-content-path="content.heading"
        id="contactForm-heading"
      >
        Snap
      </h2>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.nameLabel"
        >
          Name
        </span>
        <input
          autocomplete="name"
          class="contactForm_input"
          name="name"
          type="text"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.emailLabel"
        >
          Email
        </span>
        <input
          autocomplete="email"
          class="contactForm_input"
          name="email"
          type="email"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.messageLabel"
        >
          Message
        </span>
        <textarea
          class="contactForm_textarea"
          name="message"
          rows="5"
        />
      </label>
      <button
        class="contactForm_submit"
        data-content-path="content.submitLabel"
        type="submit"
      >
        Send
      </button>
    </form>
  </div>
</section>
`;

exports[`ContactForm variant split matches snapshot 1`] = `
<section
  class="contactForm contactForm--split"
  data-max-width="wide"
  data-variant="split"
>
  <div
    class="contactForm_inner"
  >
    <form
      aria-labelledby="contactForm-heading"
      class="contactForm_form"
    >
      <h2
        class="contactForm_heading"
        data-content-path="content.heading"
        id="contactForm-heading"
      >
        Snap
      </h2>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.nameLabel"
        >
          Name
        </span>
        <input
          autocomplete="name"
          class="contactForm_input"
          name="name"
          type="text"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.emailLabel"
        >
          Email
        </span>
        <input
          autocomplete="email"
          class="contactForm_input"
          name="email"
          type="email"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.messageLabel"
        >
          Message
        </span>
        <textarea
          class="contactForm_textarea"
          name="message"
          rows="5"
        />
      </label>
      <button
        class="contactForm_submit"
        data-content-path="content.submitLabel"
        type="submit"
      >
        Send
      </button>
    </form>
    <div
      aria-hidden="true"
      class="contactForm_map"
      role="presentation"
    />
  </div>
</section>
`;

exports[`ContactForm variant with-map matches snapshot 1`] = `
<section
  class="contactForm contactForm--with-map"
  data-max-width="wide"
  data-variant="with-map"
>
  <div
    class="contactForm_inner"
  >
    <form
      aria-labelledby="contactForm-heading"
      class="contactForm_form"
    >
      <h2
        class="contactForm_heading"
        data-content-path="content.heading"
        id="contactForm-heading"
      >
        Snap
      </h2>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.nameLabel"
        >
          Name
        </span>
        <input
          autocomplete="name"
          class="contactForm_input"
          name="name"
          type="text"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.emailLabel"
        >
          Email
        </span>
        <input
          autocomplete="email"
          class="contactForm_input"
          name="email"
          type="email"
        />
      </label>
      <label
        class="contactForm_label"
      >
        <span
          data-content-path="content.messageLabel"
        >
          Message
        </span>
        <textarea
          class="contactForm_textarea"
          name="message"
          rows="5"
        />
      </label>
      <button
        class="contactForm_submit"
        data-content-path="content.submitLabel"
        type="submit"
      >
        Send
      </button>
    </form>
    <div
      aria-hidden="true"
      class="contactForm_map"
      role="presentation"
    />
  </div>
</section>
`;
